force-app/main/default/objects/DIA_Lead_Status_History__c/DIA_Lead_Status_History__c.object-meta.xml
<CustomObject>
    <label>DIA Lead Status History</label>
    <nameField>
        <displayFormat>DIALSH-{0000000}</displayFormat>
        <label>DIA Lead Status History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DIA Lead Status Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>