force-app/main/default/objects/DIA_Lead_Status_History__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DIA_Lead_Status_Histories2</relationshipName>
    <type>Lookup</type>
</CustomField>