force-app/main/default/objects/DIA_Lead_Status_History__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>DIA Lead</label>
    <referenceTo>DIA_Lead__c</referenceTo>
    <relationshipLabel>DIA Lead Status Histories</relationshipLabel>
    <relationshipName>DIA_Lead_Status_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>